--- a/[FE]프론트/my-app/public/index.html
+++ b/[FE]프론트/my-app/public/index.html
@@ -25,7 +25,13 @@
     <title>CRIT</title>
   </head>
   <body>
+
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
+  <style>
+    body {
+      zoom: 80%;
+    }
+  </style>
 </html>
